fixed image not showing for apopseis bug + margin bottom for articles in main page

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -307,6 +307,7 @@ h2 {
     margin-right: 20px;
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
 }
 
 .koinonia-article-large .article {
