--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -325,7 +325,7 @@ body {
 
 .ked_press {
     height: 5rem;
-    bottom: 10px;
+    bottom: 15px;
     right: 5px;
     position: relative;
     /* 108px */
